* [FEATURE] Add glpi 9.4 support
* [BUGFIX]  Fix generating pxelinux menus for restoring.


Pulse 2 4.5.2
=============
* [FEATURE] Allow install of plugin if a specific version of client is met
* [FEATURE] Switch from RaphaelJS to d3.js
* [FEATURE] Function to record execution time of plugins
* [BUGFIX]  Fix creating groups when the database is not called glpi
* [BUGFIX]  Fix dashboard counters
* [BUGFIX]  Fix the release of resources after a deployment
* [BUGFIX]  Fix generation of random deployment session names
* [BUGFIX]  Fix the release of resources in case of lost connections
* [BUGFIX]  Fix reconnection of master agent to xmpp server


Pulse 2 4.5.1
=============
* [FEATURE] Expert file download allows download of several files and folders
* [FEATURE] File download shows a tree view of the remote filesystem
* [FEATURE] Update the OS widget for the dashboard
* [FEATURE] Architecture and OS version can be used for creating dynamic groups
* [BUGFIX]  Make the remote control icons clickable when there is more than one access method
* [BUGFIX]  Fix user used for guacamole ssh connections
* [BUGFIX]  Fix user used for backup commands
* [BUGFIX]  Improve the function that detects the presence of clients
* [BUGFIX]  In expert mode the default action if a package step returns an error is to go to END_ERROR
* [BUGFIX]  Check package format before doing a deployment
* [BUGFIX]  Do not log machines info and plugins by default
* [BUGFIX]  Fix abort of deployments on groups in cases where the machines are offline
* [BUGFIX]  Fix copy of files when machine is connected to a relay server that is not on main Pulse server


Pulse 2 4.5
===========
* [FEATURE] Add glpi 9.2 support
* [FEATURE] Add glpi 9.3 support
* [FEATURE] Add Agent "Auto Update" feature
* [FEATURE] Show the presence status in backup machine list
* [FEATURE] New imaging post-install scripts available
* [FEATURE] Allow creation of dyngroups from registry keys