@@ -1,3 +1,4 @@
+* [FEATURE] Allow to use an externalised msc database
 * [FEATURE] Add glpi 9.4 support
 * [BUGFIX]  Fix generating pxelinux menus for restoring.
 
